--- a/articles/templates/article_detail.html
+++ b/articles/templates/article_detail.html
@@ -2,6 +2,13 @@
 <p>{{ article.content }}</p>
 <p><i>Criado em: {{ article.created_at }}</i></p>
 
+<hr>
+<h3>Likes: {{ likes }}</h3>
+<form action="{% url 'article_like' article.pk %}" method="post">
+    {% csrf_token %}
+    <button type="submit">Curtir 👍</button>
+</form>
+
 <a href="{% url 'article_edit' article.pk %}">Editar</a> |
 <a href="{% url 'article_delete' article.pk %}">Excluir</a> |
 <a href="{% url 'article_list' %}">Voltar</a>
