feat: article author feature added

--- a/articles/templates/article_detail.html
+++ b/articles/templates/article_detail.html
@@ -1,5 +1,6 @@
 <h1>{{ article.title }}</h1>
 <p>{{ article.content }}</p>
+<p>Autor(a): {{ article.author }}</p>
 <p><i>Criado em: {{ article.created_at }}</i></p>
 
 <hr>
