--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -58,4 +58,52 @@
         </div>
     </section>
 
+    <section class="py-5">
+        <div class="container">
+            <h2 class="text-center fw-bold mb-4">Últimas Discussões na Comunidade</h2>
+            
+            {% for article in articles %}
+
+                <div class="card h-100 mb-3 p-4">
+                    <div class="card-body">
+                        <div class="d-flex align-items-center mb-4">
+                            <img src="{{ article.author.picture.url }}" alt="{{ article.author.username }}" class="me-3 rounded-circle w-100 border border-secondary" style="max-width: 50px; max-height: 50px;">
+                            <div>
+                                <p class="fs-5 fw-bold mb-0">{{ article.author.user.username }}</p>
+                                <p class="mb-0"><small class="text-muted">{{ article.created_at }}</small></p>
+                            </div>
+                        </div>
+
+                        <h5 class="card-title fs-4">
+                            <a href="{% url 'article_detail' article.pk %}" class="text-primary fw-bold">
+                                {{ article.title }}
+                            </a>
+                        </h5>
+
+                        {% if article.resume %}
+                            <p class="card-text">{{ article.resume }}</p>
+                        {% else %}
+                            <p class="card-text">{{ article.content | truncatechars:300 }}</p>
+                        {% endif %}
+
+                        {% if article.tags.exists %}{% for tag in article.tags.all %}<span class="badge bg-success me-2">{{ tag.name }}</span>{% endfor %}{% endif %}
+
+                        <div class="mt-4">
+                            <a href="{% url 'article_detail' article.pk %}" class="btn btn-outline-primary">Leia mais</a>
+                        </div>
+                    </div>
+                </div>
+
+            {% endfor %}
+
+            {% comment %} Ver todas as discussões {% endcomment %}
+            <div class="text-center mt-5">
+                <a href="{% url 'article_list' %}" class="btn btn-primary btn-lg fs-6">
+                    Ver todas as Discussões <span><i class="bi bi-arrow-right ms-2"></i></span>
+                </a>
+            </div>
+
+        </div>
+    </section>
+
 {% endblock content %}
