--- a/articles/templates/article_update.html
+++ b/articles/templates/article_update.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Novo Artigo{% endblock title %}
+{% block title %}Editar{% endblock title %}
 
 {% block content %}
 
@@ -8,13 +8,13 @@
     <div class="container">
       <div class="card p-4">
         <div class="card-body">
-          <h1 class="display-5 fw-bold mb-2">Criar Novo Artigo</h1>
+          <h1 class="display-5 fw-bold mb-2">Editar Artigo</h1>
           <p class="text-muted fs-5 mb-5">Compartilhe suas ideias com a comunidade.</p>
           <form method="post">
             {% csrf_token %}
             {{ form.as_p }}
             <div class="d-flex align-items-center gap-2 mt-5">
-              <button type="submit" class="btn btn-primary">Publicar</button>
+              <button type="submit" class="btn btn-primary">Salvar</button>
               <a href="{% url 'article_list' %}" class="btn btn-outline-dark">Cancelar</a>
             </div>
           </form>
