feat: new article delete template design

--- a/articles/templates/article_delete.html
+++ b/articles/templates/article_delete.html
@@ -1,7 +1,26 @@
-<h1>Excluir Artigo</h1>
-<p>Tem certeza que deseja excluir "{{ object.title }}"?</p>
-<form method="post">
-  {% csrf_token %}
-  <button type="submit">Sim, excluir</button>
-</form>
-<a href="{% url 'article_list' %}">Cancelar</a>
+{% extends "base.html" %}
+
+{% block title %}Excluir{% endblock title %}
+
+{% block content %}
+
+  <section class="py-5">
+    <div class="container">
+      <div class="card p-4">
+        <div class="card-body">
+          <h1 class="display-5 fw-bold mb-2">Excluir Artigo</h1>
+          <p class="text-primary fs-5">Tem certeza que deseja excluir o artigo "<strong>{{ article.title }}</strong>"?</p>
+          <p class="text-dark fs-5 mb-3">Esta ação não terá mais volta.</p>
+          <form method="post" class="mt-4">
+            {% csrf_token %}
+            <div class="d-flex align-items-center gap-2">
+              <button type="submit" class="btn btn-danger">Excluir</button>
+              <a href="{% url 'article_detail' article.pk %}" class="btn btn-outline-dark">Cancelar</a>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </section>
+
+{% endblock content %}
