--- a/articles/templates/article_detail.html
+++ b/articles/templates/article_detail.html
@@ -79,11 +79,11 @@
                         {% if request.user.is_authenticated and request.user == article.author.user %}
                         
                             <a href="{% url 'article_update' article.pk %}" class="btn btn-outline-success">Editar</a>
-                            <a href="{% url 'article_update' article.pk %}" class="btn btn-outline-danger">Excluir</a>
+                            <a href="{% url 'article_delete' article.pk %}" class="btn btn-outline-danger">Excluir</a>
                             
                         {% endif %}
                             
-                        <a href="{% url 'article_update' article.pk %}" class="btn btn-outline-dark">Voltar</a>
+                        <a href="{% url 'article_list' %}" class="btn btn-outline-dark">Voltar</a>
                     </div>
                 </div>
             </div>
