--- a/articles/templates/article_detail.html
+++ b/articles/templates/article_detail.html
@@ -7,7 +7,7 @@
     <section class="py-5">
         <div class="container">
             <div class="card p-4">
-                <div class="card-header">
+                <div class="card-header bg-white">
                     <h1 class="display-6 text-center fw-bold mb-4">{{ article.title }}</h1>
                     <div class="d-flex align-items-center justify-content-center mb-3">
                         <img src="{{ article.author.picture.url }}" alt="{{ article.author.username }}" class="rounded-circle me-3" style="max-width: 50px; max-height: 50px;">
@@ -29,16 +29,28 @@
                     {% endif %}
                 </div>
 
-                <div class="card-footer mt-4">
+                <div class="card-footer mt-4 bg-white">
 
                     {% comment %} Likes {% endcomment %}
-                    <form action="{% url "article_like" article.pk %}" method="post">
-                        {% csrf_token %}
-                        <button type="submit" class="btn btn-outline-primary mt-4 fs-5">
-                            <i class="bi bi-hand-thumbs-up"></i>
-                            <span class="ms-2">{{ likes }}</span>
-                        </button>
-                    </form>
+                    <div class="d-flex align-items-center gap-3 mt-4">
+                        <form action="{% url "article_like" article.pk %}" method="post">
+                            {% csrf_token %}
+                            <button type="submit" class="btn btn-outline-primary fs-5">
+                                <i class="bi bi-hand-thumbs-up"></i>
+                                <span class="ms-2">{{ likes }}</span>
+                            </button>
+                        </form>
+    
+                        {% comment %} Controles {% endcomment %}
+                        {% if request.user.is_authenticated and request.user == article.author.user %}
+                            <div class="d-flex align-items-center gap-2">
+                            
+                                <a href="{% url 'article_update' article.pk %}" class="btn btn-outline-success">Editar</a>
+                                <a href="{% url 'article_delete' article.pk %}" class="btn btn-outline-danger">Excluir</a>
+                                
+                            </div>
+                        {% endif %}
+                    </div>
 
                     {% comment %} Comentários {% endcomment %}
                     <h6 class="fs-4 fw-bold mt-4">Comentários</h6>
@@ -74,18 +86,11 @@
                         </p>
                     {% endif %}
 
-                    {% comment %} Controles {% endcomment %}
-                    <div class="d-flex align-items-center gap-2">
-                        {% if request.user.is_authenticated and request.user == article.author.user %}
-                        
-                            <a href="{% url 'article_update' article.pk %}" class="btn btn-outline-success">Editar</a>
-                            <a href="{% url 'article_delete' article.pk %}" class="btn btn-outline-danger">Excluir</a>
-                            
-                        {% endif %}
-                            
-                        <a href="{% url 'article_list' %}" class="btn btn-outline-dark">Voltar</a>
-                    </div>
+                    
                 </div>
+            </div>
+            <div class="d-flex justify-content-center mt-5">
+                <a href="{% url 'article_list' %}" class="btn btn-primary fs-5 btn-lg">Voltar para Feed</a>
             </div>
         </div>
     </section>
