style: screen max width limited to 900px for all forms and detail

--- a/articles/templates/article_detail.html
+++ b/articles/templates/article_detail.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-    <section class="py-5">
+    <section class="py-5 mx-auto" style="max-width: 900px !important;">
         <div class="container">
             <div class="card p-4">
                 <div class="card-header bg-white">
