--- a/articles/templates/article_list.html
+++ b/articles/templates/article_list.html
@@ -30,7 +30,7 @@
                 {% if article.resume %}
                     <p class="card-text">{{ article.resume }}</p>
                 {% else %}
-                    <p class="card-text">{{ article.content | truncatechars:300 }}</p>
+                    <p class="card-text">{{ article.content | truncatechars:300 | safe }}</p>
                 {% endif %}
 
                 {% if article.tags.exists %}
