--- a/articles/templates/article_update.html
+++ b/articles/templates/article_update.html
@@ -12,7 +12,7 @@
           <p class="text-muted fs-5 mb-5">Compartilhe suas ideias com a comunidade.</p>
           <form method="post">
             {% csrf_token %}
-            {{ form.as_p }}
+            {{ form.as_p|safe }}
             <div class="d-flex align-items-center gap-2 mt-5">
               <button type="submit" class="btn btn-primary">Salvar</button>
               <a href="{% url 'article_list' %}" class="btn btn-outline-dark">Cancelar</a>
