--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -11,7 +11,7 @@
                     Entre em sua conta
                 </h1>
 
-                <form method="post" class="mx-auto" style="max-width: 500px;">
+                <form method="post" class="w-100 mx-auto" style="max-width: 500px;">
                     {% csrf_token %}
                     {{ form.as_p }}
                     <button type="submit" class="btn btn-outline-success">Entrar</button>
