--- a/accounts/templates/register.html
+++ b/accounts/templates/register.html
@@ -1,9 +1,30 @@
-<h1>Cadastrar</h1>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Cadastrar</button>
-</form>
-<p>
-    Já possui uma conta? <a href="{% url "login" %}">Faça login.</a>
-</p>
+{% extends "base.html" %}
+
+{% block title %}Registrar{% endblock title %}
+
+{% block content %}
+
+    <section class="py-5 mx-auto" style="max-width: 900px;">
+        <div class="container">
+            <div class="card p-5">
+                <h1 class="display-6 fw-bold mb-5 text-center">
+                    Crie uma conta
+                </h1>
+
+                <form method="post" class="w-100 mx-auto" style="max-width: 500px;">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <button type="submit" class="btn btn-outline-success">Entrar</button>
+                </form>
+
+                <p class="mt-4 text-center">
+                    Já possui uma conta? <a href="{% url 'login' %}">Faça Login.</a>
+                </p>
+            </div>
+            <div class="d-flex justify-content-center mt-5">
+                <a href="{% url "home" %}" class="btn btn-primary btn-lg">Voltar para o Início</a>
+            </div>
+        </div>
+    </section>
+
+{% endblock content %}
