--- a/app/templates/components/_articles.html
+++ b/app/templates/components/_articles.html
@@ -5,7 +5,7 @@
             <div class="card mb-3 p-4">
                 <div class="card-body">
                     <div class="d-flex align-items-center mb-4">
-                        <img src="{{ article.author.picture.url }}" alt="{{ article.author.username }}" class="me-3 rounded-circle w-100 border border-secondary" style="max-width: 50px; max-height: 50px;">
+                        <img src="{{ article.author.picture.url }}" alt="{{ article.author.username }}" class="me-3 rounded-circle border border-secondary" style="width: 50px; height: 50px; object-fit: cover;">
                         <div>
                             <p class="fs-5 fw-bold mb-0">{{ article.author.user.username }}</p>
                             <p class="mb-0"><small class="text-muted">{{ article.created_at }}</small></p>
