fix: 'sair' button background color fixed

--- a/app/templates/components/_header.html
+++ b/app/templates/components/_header.html
@@ -80,7 +80,7 @@
                   <button
                     type="submit"
                     class="dropdown-item"
-                    style="border: none; background: none; cursor: pointer"
+                    style="cursor: pointer"
                   >
                     Sair
                   </button>
