--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,7 +13,12 @@
     {% comment %} Bootstrap JS {% endcomment %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous" defer></script>
     {% comment %} Custom CSS (if needed) {% endcomment %}
-    {% block css %}{% endblock css %}
+    <style>
+        a {
+            text-decoration: none;
+        }
+        {% block css %}{% endblock css %}
+    </style>
 </head>
 <body class="d-flex flex-column min-vh-100">
     {% include 'components/_header.html' %}
