--- a/articles/templates/article_detail.html
+++ b/articles/templates/article_detail.html
@@ -1,5 +1,16 @@
 {% extends "base.html" %}
 
+{% block css %}
+
+    h2 {
+        font-size: 2rem;
+    }
+    h3 {
+        font-size: 1.5rem;
+    }
+
+{% endblock css %}
+
 {% block title %}Detalhes{% endblock title %}
 
 {% block content %}
@@ -10,7 +21,7 @@
                 <div class="card-header bg-white">
                     <h1 class="display-6 text-center fw-bold mb-4">{{ article.title }}</h1>
                     <div class="d-flex align-items-center justify-content-center mb-3">
-                        <img src="{{ article.author.picture.url }}" alt="{{ article.author.username }}" class="rounded-circle me-3" style="width: 120px; height: 120px; object-fit: cover;">
+                        <img src="{{ article.author.picture.url }}" alt="{{ article.author.username }}" class="rounded-circle me-3" style="width: 50px; height: 50px; object-fit: cover;">
                         <div>
                             <p class="fs-6 fw-bold mb-0">Autor: {{ article.author.user.username }}</p>
                             <p class="mb-0"><small class="text-muted">{{ article.created_at }}</small></p>
